# Helpey

./: .gitignore  CLAUDE.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 80d3f99c55f2_use_timezone_aware_timestamps.py  a7b9c1d45f67_add_cache_version_table.py  ae3929bf54cc_create_initial_tables.py  b1c4e8a23f01_add_workos_sso_support.py  c3d5f7a89b12_add_drive_sync_tracking.py  d4e6f8b01c23_add_document_permissions.py  e5f7a9b23d45_add_document_chunks_pgvector.py  f6a8b0c34e56_shared_document_pool.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  chats.py  deps.py  documents.py
backend/app/db/: base.py  engine.py  session.py
backend/app/models/: __init__.py  chat.py  document.py  document_chunk.py  message.py  user.py
backend/app/services/: answer.py  chunker.py  classifier.py  document_parser.py  embeddings.py  google_drive.py  permission_cache.py
backend/app/tasks/: celery_app.py  process_document.py  sync_drive.py
backend/scripts/: reindex_all.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/components/: chat-input.tsx  chat-sidebar.tsx  chat-thread.tsx  drive-connect-banner.tsx  drive-picker.tsx  message-bubble.tsx  sync-dashboard.tsx
frontend/src/lib/: api.ts  sse.ts
frontend/src/pages/: auth-callback.tsx  chat.tsx  login.tsx
frontend/src/stores/: auth-store.ts  chat-store.ts
